--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -1,3 +1,4 @@
+/*viewer.css*/
 * {
     padding: 0;
     margin: 0;
@@ -207,4 +208,8 @@ body {
 
 #outlineView span:hover {
   background-color: #f5f5f5;
+}
+
+.viewer{
+	background: #f5f5f5;
 }
